# varformat

./: .pre-commit-config.yaml  README.md  dollarvar.py  license-header.txt  pyproject.toml  tox.ini
.github/workflows/: pre-commit.yml  release.yml  tests.yml
scripts/: package-requirements.txt  package.py
src/dollarvar/: formats.py
src/varformat/: __init__.py  formats.py
tests/: test_main.py
