[project]
name = "dollarvar"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
tests = ["pytest"]

[tool.pylint.'MESSAGES CONTROL']
disable = "missing-function-docstring, missing-module-docstring"
max-line-length = 120

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--doctest-modules"
doctest_optionflags = "IGNORE_EXCEPTION_DETAIL"
