[project]
name = "varformat"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
	"regex",
    "typing-extensions; python_version < '3.10'"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
	"Topic :: Text Processing",
	"Typing :: Typed"
]

[project.optional-dependencies]
dev = ["pytest", "pylint"]

[tool.pylint.'MESSAGES CONTROL']
disable = "missing-function-docstring, too-many-arguments, too-many-locals"
max-line-length = 120

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--doctest-modules --doctest-glob='README.md'"
doctest_optionflags = "IGNORE_EXCEPTION_DETAIL"

[tool.black]
line-length = 120
