[project]
name = "varformat"
version = "1.0.0"
authors = [
    { name = "Anna Zhukova" }
]
description = "Format an parse strings with ${variables} of any syntax."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
	"regex",
    "typing-extensions; python_version < '3.10'"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
	"Topic :: Text Processing",
	"Typing :: Typed"
]

[tool.pylint.'MESSAGES CONTROL']
disable = "missing-function-docstring, too-many-arguments, too-many-locals"
max-line-length = 120

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--import-mode=importlib",
    "--doctest-modules",
    "--doctest-glob=README.md",
    "--ignore-glob=scripts"
]
doctest_optionflags = "IGNORE_EXCEPTION_DETAIL"

[tool.black]
line-length = 120
